# Etw-Rust-Tool

./: Cargo.toml  README.md
src/: main.rs
src/etw_constructs/: consumer.rs  controller.rs  mod.rs  tdh_wrapper.rs
