[package]
name = "event_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"
rayon = "1.10.0"
windows = { version = "0.58.0", features = [
    "Win32",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Time",
] }
